--- a/catalog.html
+++ b/catalog.html
@@ -144,10 +144,16 @@
                   <legend class="catalog-filter-title">Стоимость, ₽:</legend>
                   <div class="range">
                     <div class="range-wrapper-inputs">
+                      <label class="range-form-field-text">
                       <input class="range-input range-min" type="number" value="0" name="min-price"
-                        style=" width: 143px" placeholder="от">
+                        style=" width: 143px">
+                        <span>от</span>
+                      </label>
+                      <label class="range-form-field-text">
                       <input class="range-input range-max"  type="number" value="9000" name="max-price"
-                        style=" width: 143px" placeholder="до">
+                        style=" width: 143px" >
+                        <span>до</span>
+                      </label>
                     </div>
                     <div class="range-scale">
                       <div class="range-bar" style="left: 0; width: 226px">
