--- a/index.html
+++ b/index.html
@@ -202,23 +202,46 @@
             <div class="number-of-visitors">
               <p class="quantity-group">
                 <label class="modal-form-title" for="grown-ups">Взрослые:</label>
-                <input class="modal-form-text form-number" type="number" id="grown-ups" name="grown-ups" placeholder="">
+                <label class="modal-input-container">
+                  <input class="modal-form-text form-number" type="number" id="grown-ups" name="grown-ups"
+                    placeholder="">
+                  <button class="modal-button plus"><svg xmlns="http://www.w3.org/2000/svg" width="14" height="14"
+                      fill="none" viewBox="0 0 14 14">
+                      <path fill="#000" d="M14 6H8V0H6v6H0v2h6v6h2V8h6V6Z" />
+                    </svg></button>
+                  <button class="modal-button minus"><svg xmlns="http://www.w3.org/2000/svg" width="14" height="2"
+                      fill="none" viewBox="0 0 14 2">
+                      <path fill="#000" d="M0 0v2h14V0H0Z" />
+                    </svg></button>
+                </label>
               </p>
               <p class="quantity-group">
                 <span class="form-label form-label-icon">
-                <label class="modal-form-title " for="children">Дети:</label>
-                <span class="tooltip ">
-                  <button class="tooltip-toggle" type="button" aria-labelledby="tooltip-label-date">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="none" viewBox="0 0 20 20">
-                      <path fill="#fff" fill-rule="evenodd" d="M9 4h2v2H9V4Zm2 12H9V7h2v9Z" clip-rule="evenodd" />
-                    </svg>
-                  </button>
-                  <span class="tooltip-text" role="tooltip" id="tooltip-label-date">Укажите количество детей, которые будут с вами, возраст которых от 6 до 18
-                    лет. Дети до 6 лет размещаются бесплатно.</span>
+                  <label class="modal-form-title " for="children">Дети:</label>
+                  <span class="tooltip ">
+                    <button class="tooltip-toggle" type="button" aria-labelledby="tooltip-label-date">
+                      <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="none" viewBox="0 0 20 20">
+                        <path fill="#fff" fill-rule="evenodd" d="M9 4h2v2H9V4Zm2 12H9V7h2v9Z" clip-rule="evenodd" />
+                      </svg>
+                    </button>
+                    <span class="tooltip-text" role="tooltip" id="tooltip-label-date">Укажите количество детей, которые
+                      будут с вами, возраст которых от 6 до 18
+                      лет. Дети до 6 лет размещаются бесплатно.</span>
+                  </span>
                 </span>
+                <label class="modal-input-container">
+                  <input class="modal-form-text form-number" type="number" id="children" name="children" placeholder="">
+                  <button class="modal-button plus"><svg xmlns="http://www.w3.org/2000/svg" width="14" height="14"
+                      fill="none" viewBox="0 0 14 14">
+                      <path fill="#000" d="M14 6H8V0H6v6H0v2h6v6h2V8h6V6Z" />
+                    </svg></button>
+                  <button class="modal-button minus"><svg xmlns="http://www.w3.org/2000/svg" width="14" height="2"
+                      fill="none" viewBox="0 0 14 2">
+                      <path fill="#000" d="M0 0v2h14V0H0Z" />
+                    </svg></button>
+                </label>
                 </span>
-                <input class="modal-form-text form-number" type="number" id="children" name="children" placeholder="">
-                </span>
+
               </p>
             </div>
           </form>
