--- a/index.html
+++ b/index.html
@@ -206,12 +206,12 @@
                   <input class="modal-form-text form-number" type="number" id="grown-ups" name="grown-ups"
                     placeholder="">
                   <button class="modal-button plus"><svg xmlns="http://www.w3.org/2000/svg" width="14" height="14"
-                      fill="none" viewBox="0 0 14 14">
-                      <path fill="#000" d="M14 6H8V0H6v6H0v2h6v6h2V8h6V6Z" />
+                      fill="currentColor" viewBox="0 0 14 14">
+                      <path d="M14 6H8V0H6v6H0v2h6v6h2V8h6V6Z" />
                     </svg></button>
                   <button class="modal-button minus"><svg xmlns="http://www.w3.org/2000/svg" width="14" height="2"
-                      fill="none" viewBox="0 0 14 2">
-                      <path fill="#000" d="M0 0v2h14V0H0Z" />
+                      fill="currentColor" viewBox="0 0 14 2">
+                      <path d="M0 0v2h14V0H0Z" />
                     </svg></button>
                 </label>
               </p>
@@ -232,12 +232,12 @@
                 <label class="modal-input-container">
                   <input class="modal-form-text form-number" type="number" id="children" name="children" placeholder="">
                   <button class="modal-button plus"><svg xmlns="http://www.w3.org/2000/svg" width="14" height="14"
-                      fill="none" viewBox="0 0 14 14">
-                      <path fill="#000" d="M14 6H8V0H6v6H0v2h6v6h2V8h6V6Z" />
+                      fill="currentColor" viewBox="0 0 14 14">
+                      <path d="M14 6H8V0H6v6H0v2h6v6h2V8h6V6Z" />
                     </svg></button>
                   <button class="modal-button minus"><svg xmlns="http://www.w3.org/2000/svg" width="14" height="2"
-                      fill="none" viewBox="0 0 14 2">
-                      <path fill="#000" d="M0 0v2h14V0H0Z" />
+                      fill="currentColor" viewBox="0 0 14 2">
+                      <path d="M0 0v2h14V0H0Z" />
                     </svg></button>
                 </label>
                 </span>
