--- a/index.html
+++ b/index.html
@@ -193,12 +193,20 @@
           <form class="date-form" action="https://echo.htmlacademy.ru/" method="post">
             <p class="field-group">
               <label class="modal-form-title" for="arrival-date">Дата Заезда:</label>
+              <label>
               <input class="modal-form-text" type="date" id="arrival-date" name="arrival-date" placeholder="">
+                <span class="data-information data-error">Мы не можем отправить вас в прошлое.</span>
+              </label>
             </p>
             <p class="field-group">
               <label class="modal-form-title" for="date-of-departure">Дата Выезда:</label>
-              <input class="modal-form-text" type="date" id="date-of-departure" name="date-of-departure" placeholder="">
+              <label>
+                <input class="modal-form-text" type="date" id="date-of-departure" name="date-of-departure"
+                  placeholder="">
+                <span class="data-information">На эти даты есть свободные номера. Пока есть.</span>
+              </label>
             </p>
+
             <div class="number-of-visitors">
               <p class="quantity-group">
                 <label class="modal-form-title" for="grown-ups">Взрослые:</label>
