--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
         </a>
       </footer>
     </div>
-    <div class="modal-container">
+    <!-- <div class="modal-container">
       <div class="modal modal-auth">
         <button class="modal-close-button">
           <span class="visually-hidden">Закрыть</span>
@@ -194,7 +194,8 @@
             <p class="field-group">
               <label class="modal-form-title" for="arrival-date">Дата Заезда:</label>
               <label class="data-icon">
-              <input class="modal-form-text" type="text" id="arrival-date" name="arrival-date" placeholder="27 апреля 2020">
+                <input class="modal-form-text" type="text" id="arrival-date" name="arrival-date"
+                  placeholder="27 апреля 2020">
                 <span class="data-information data-error">Мы не можем отправить вас в прошлое.</span>
               </label>
             </p>
@@ -254,7 +255,7 @@
           </form>
         </section>
         <a class="modal-container-button" href="#">Найти</a>
-      </div>
+      </div> -->
   </body>
 
 </html>
