--- a/catalog.html
+++ b/catalog.html
@@ -146,12 +146,12 @@
                     <div class="range-wrapper-inputs">
                       <label class="range-form-field-text">
                       <input class="range-input range-min" type="number" value="0" name="min-price"
-                        style=" width: 143px">
+                        style=" width: 143px" placeholder="0">
                         <span>от</span>
                       </label>
                       <label class="range-form-field-text">
                       <input class="range-input range-max"  type="number" value="9000" name="max-price"
-                        style=" width: 143px" >
+                        style=" width: 143px" placeholder="9000">
                         <span>до</span>
                       </label>
                     </div>
