--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
               <label class="modal-form-title" for="arrival-date">Дата Заезда:</label>
               <label class="data-icon">
                 <input class="modal-form-text" type="text" id="arrival-date" name="arrival-date"
-                  placeholder="27 апреля 2020">
+                  placeholder="">
                 <span class="data-information data-error">Мы не можем отправить вас в прошлое.</span>
               </label>
             </p>
@@ -203,7 +203,7 @@
               <label class="modal-form-title" for="date-of-departure">Дата Выезда:</label>
               <label class="data-icon">
                 <input class="modal-form-text" type="text" id="date-of-departure" name="date-of-departure"
-                  placeholder="1 сентября 2021">
+                  placeholder="">
                 <span class="data-information">На эти даты есть свободные номера. Пока есть.</span>
               </label>
             </p>
