--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
         </a>
       </footer>
     </div>
-    <!-- <div class="modal-container">
+    <div class="modal-container">
       <div class="modal modal-auth">
         <button class="modal-close-button">
           <span class="visually-hidden">Закрыть</span>
@@ -255,7 +255,7 @@
           </form>
         </section>
         <a class="modal-container-button" href="#">Найти</a>
-      </div> -->
+      </div>
   </body>
 
 </html>
