--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
     </div>
     <div class="modal-container">
       <div class="modal modal-auth">
-        <button class="modal-close-button">
+        <button class="modal-close-button" type="button">
           <span class="visually-hidden">Закрыть</span>
         </button>
         <section class="modal-content">
@@ -213,14 +213,14 @@
                 <label class="modal-input-container">
                   <input class="modal-form-text form-number" type="number" id="grown-ups" name="grown-ups"
                     placeholder="">
-                  <button class="modal-button plus"><svg xmlns="http://www.w3.org/2000/svg" width="14" height="14"
-                      fill="currentColor" viewBox="0 0 14 14">
-                      <path d="M14 6H8V0H6v6H0v2h6v6h2V8h6V6Z" />
-                    </svg></button>
-                  <button class="modal-button minus"><svg xmlns="http://www.w3.org/2000/svg" width="14" height="2"
-                      fill="currentColor" viewBox="0 0 14 2">
-                      <path d="M0 0v2h14V0H0Z" />
-                    </svg></button>
+                  <button class="modal-button minus" type="button"><svg xmlns="http://www.w3.org/2000/svg" width="14" height="2"
+                    fill="currentColor" viewBox="0 0 14 2">
+                    <path d="M0 0v2h14V0H0Z" />
+                  </svg></button>
+                  <button class="modal-button plus" type="button"><svg xmlns="http://www.w3.org/2000/svg" width="14" height="14"
+                    fill="currentColor" viewBox="0 0 14 14">
+                    <path d="M14 6H8V0H6v6H0v2h6v6h2V8h6V6Z" />
+                  </svg></button>
                 </label>
               </p>
               <p class="quantity-group">
@@ -239,14 +239,14 @@
                 </span>
                 <label class="modal-input-container">
                   <input class="modal-form-text form-number" type="number" id="children" name="children" placeholder="">
-                  <button class="modal-button plus"><svg xmlns="http://www.w3.org/2000/svg" width="14" height="14"
-                      fill="currentColor" viewBox="0 0 14 14">
-                      <path d="M14 6H8V0H6v6H0v2h6v6h2V8h6V6Z" />
-                    </svg></button>
-                  <button class="modal-button minus"><svg xmlns="http://www.w3.org/2000/svg" width="14" height="2"
-                      fill="currentColor" viewBox="0 0 14 2">
-                      <path d="M0 0v2h14V0H0Z" />
-                    </svg></button>
+                  <button class="modal-button minus" type="button"><svg xmlns="http://www.w3.org/2000/svg" width="14" height="2"
+                    fill="currentColor" viewBox="0 0 14 2">
+                    <path d="M0 0v2h14V0H0Z" />
+                  </svg></button>
+                  <button class="modal-button plus" type="button"><svg xmlns="http://www.w3.org/2000/svg" width="14" height="14"
+                    fill="currentColor" viewBox="0 0 14 14">
+                    <path d="M14 6H8V0H6v6H0v2h6v6h2V8h6V6Z" />
+                  </svg></button>
                 </label>
                 </span>
 
