--- a/index.html
+++ b/index.html
@@ -194,8 +194,7 @@
             <p class="field-group">
               <label class="modal-form-title" for="arrival-date">Дата Заезда:</label>
               <label class="data-icon">
-                <input class="modal-form-text" type="text" id="arrival-date" name="arrival-date"
-                  placeholder="">
+                <input class="modal-form-text" type="text" id="arrival-date" name="arrival-date" placeholder="">
                 <span class="data-information data-error">Мы не можем отправить вас в прошлое.</span>
               </label>
             </p>
@@ -213,14 +212,14 @@
                 <label class="modal-input-container">
                   <input class="modal-form-text form-number" type="number" id="grown-ups" name="grown-ups"
                     placeholder="">
-                  <button class="modal-button minus" type="button"><svg xmlns="http://www.w3.org/2000/svg" width="14" height="2"
-                    fill="currentColor" viewBox="0 0 14 2">
-                    <path d="M0 0v2h14V0H0Z" />
-                  </svg></button>
-                  <button class="modal-button plus" type="button"><svg xmlns="http://www.w3.org/2000/svg" width="14" height="14"
-                    fill="currentColor" viewBox="0 0 14 14">
-                    <path d="M14 6H8V0H6v6H0v2h6v6h2V8h6V6Z" />
-                  </svg></button>
+                  <button class="modal-button minus" type="button"><svg xmlns="http://www.w3.org/2000/svg" width="14"
+                      height="2" fill="currentColor" viewBox="0 0 14 2">
+                      <path d="M0 0v2h14V0H0Z" />
+                    </svg></button>
+                  <button class="modal-button plus" type="button"><svg xmlns="http://www.w3.org/2000/svg" width="14"
+                      height="14" fill="currentColor" viewBox="0 0 14 14">
+                      <path d="M14 6H8V0H6v6H0v2h6v6h2V8h6V6Z" />
+                    </svg></button>
                 </label>
               </p>
               <p class="quantity-group">
@@ -239,22 +238,22 @@
                 </span>
                 <label class="modal-input-container">
                   <input class="modal-form-text form-number" type="number" id="children" name="children" placeholder="">
-                  <button class="modal-button minus" type="button"><svg xmlns="http://www.w3.org/2000/svg" width="14" height="2"
-                    fill="currentColor" viewBox="0 0 14 2">
-                    <path d="M0 0v2h14V0H0Z" />
-                  </svg></button>
-                  <button class="modal-button plus" type="button"><svg xmlns="http://www.w3.org/2000/svg" width="14" height="14"
-                    fill="currentColor" viewBox="0 0 14 14">
-                    <path d="M14 6H8V0H6v6H0v2h6v6h2V8h6V6Z" />
-                  </svg></button>
+                  <button class="modal-button minus" type="button"><svg xmlns="http://www.w3.org/2000/svg" width="14"
+                      height="2" fill="currentColor" viewBox="0 0 14 2">
+                      <path d="M0 0v2h14V0H0Z" />
+                    </svg></button>
+                  <button class="modal-button plus" type="button"><svg xmlns="http://www.w3.org/2000/svg" width="14"
+                      height="14" fill="currentColor" viewBox="0 0 14 14">
+                      <path d="M14 6H8V0H6v6H0v2h6v6h2V8h6V6Z" />
+                    </svg></button>
                 </label>
                 </span>
 
               </p>
             </div>
+            <button type="submit" class="modal-container-button">Найти</button>
           </form>
         </section>
-        <a class="modal-container-button" href="#">Найти</a>
       </div>
   </body>
 
