--- a/index.html
+++ b/index.html
@@ -192,23 +192,23 @@
           <form class="date-form" action="https://echo.htmlacademy.ru/" method="post">
             <div class="field-group">
               <label class="modal-form-title" for="arrival-date">Дата Заезда:</label>
-              <span class="data-icon">
+              <div class="data-icon">
                 <input class="modal-form-text" type="text" id="arrival-date" name="arrival-date" placeholder="">
                 <span class="data-information data-error">Мы не можем отправить вас в прошлое.</span>
-              </span>
+              </div>
             </div>
             <div class="field-group">
               <label class="modal-form-title" for="date-of-departure">Дата Выезда:</label>
-              <span class="data-icon">
+              <div class="data-icon">
                 <input class="modal-form-text" type="text" id="date-of-departure" name="date-of-departure"
                   placeholder="">
                 <span class="data-information">На эти даты есть свободные номера. Пока есть.</span>
-              </span>
+              </div>
             </div>
             <div class="number-of-visitors">
               <div class="quantity-group">
                 <label class="modal-form-title" for="grown-ups">Взрослые:</label>
-                <label class="modal-input-container">
+                <div class="modal-input-container">
                   <button class="modal-button minus" type="button"><svg xmlns="http://www.w3.org/2000/svg" width="14"
                       height="2" fill="currentColor" viewBox="0 0 14 2">
                       <path d="M0 0v2h14V0H0Z" />
@@ -219,7 +219,7 @@
                       height="14" fill="currentColor" viewBox="0 0 14 14">
                       <path d="M14 6H8V0H6v6H0v2h6v6h2V8h6V6Z" />
                     </svg></button>
-                </label>
+                </div>
               </div>
               <div class="quantity-group">
                 <span class="form-label form-label-icon">
