--- a/index.html
+++ b/index.html
@@ -235,18 +235,20 @@
                       лет. Дети до 6 лет размещаются бесплатно.</span>
                   </span>
                 </span>
-                <label class="modal-input-container">
-                  <button class="modal-button minus" type="button"><svg xmlns="http://www.w3.org/2000/svg" width="14"
+                  <div class="modal-input-container">
+                  <button class="modal-button minus" type="button">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="14"
                       height="2" fill="currentColor" viewBox="0 0 14 2">
                       <path d="M0 0v2h14V0H0Z" />
-                    </svg></button>
+                    </svg>
+                  </button>
                   <input class="modal-form-text form-number" type="number" id="children" name="children" placeholder="">
 
                   <button class="modal-button plus" type="button"><svg xmlns="http://www.w3.org/2000/svg" width="14"
                       height="14" fill="currentColor" viewBox="0 0 14 14">
                       <path d="M14 6H8V0H6v6H0v2h6v6h2V8h6V6Z" />
                     </svg></button>
-                </label>
+                  </div>
 
               </div>
             </div>
