--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
                       height="2" fill="currentColor" viewBox="0 0 14 2">
                       <path d="M0 0v2h14V0H0Z" />
                     </svg></button>
-                    <input class="modal-form-text form-number" type="number" id="grown-ups" name="grown-ups"
+                  <input class="modal-form-text form-number" type="number" id="grown-ups" name="grown-ups"
                     placeholder="">
                   <button class="modal-button plus" type="button"><svg xmlns="http://www.w3.org/2000/svg" width="14"
                       height="14" fill="currentColor" viewBox="0 0 14 14">
@@ -226,7 +226,8 @@
                   <label class="modal-form-title " for="children">Дети:</label>
                   <span class="tooltip ">
                     <button class="tooltip-toggle" type="button" aria-labelledby="tooltip-label-date">
-                      <svg class="tooltip-icon" xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="none" viewBox="0 0 20 20">
+                      <svg class="tooltip-icon" xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="none"
+                        viewBox="0 0 20 20">
                         <path fill="#fff" fill-rule="evenodd" d="M9 4h2v2H9V4Zm2 12H9V7h2v9Z" clip-rule="evenodd" />
                       </svg>
                     </button>
@@ -235,20 +236,19 @@
                       лет. Дети до 6 лет размещаются бесплатно.</span>
                   </span>
                 </span>
-                  <div class="modal-input-container">
+                <div class="modal-input-container">
                   <button class="modal-button minus" type="button">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="14"
-                      height="2" fill="currentColor" viewBox="0 0 14 2">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="14" height="2" fill="currentColor"
+                      viewBox="0 0 14 2">
                       <path d="M0 0v2h14V0H0Z" />
                     </svg>
                   </button>
                   <input class="modal-form-text form-number" type="number" id="children" name="children" placeholder="">
-
                   <button class="modal-button plus" type="button"><svg xmlns="http://www.w3.org/2000/svg" width="14"
                       height="14" fill="currentColor" viewBox="0 0 14 14">
                       <path d="M14 6H8V0H6v6H0v2h6v6h2V8h6V6Z" />
                     </svg></button>
-                  </div>
+                </div>
 
               </div>
             </div>
