--- a/9/catalog.html
+++ b/9/catalog.html
@@ -140,39 +140,38 @@
                   </li>
                 </ul>
               </fieldset>
-              <form class="catalog-filter" action="https://echo.htmlacademy.ru/" method="get">
-                <fieldset class="catalog-filter-range">
-                  <legend class="catalog-filter-title">Стоимость, ₽:</legend>
-                  <div class="range">
-                    <div class="range-wrapper-inputs">
-                      <label class="range-form-field-text">
-                        <input class="range-input range-min" type="number" value="0" name="min-price"
-                          style=" width: 143px" placeholder="">
-                        <span>от</span>
-                      </label>
-                      <label class="range-form-field-text">
-                        <input class="range-input range-max" type="number" value="9000" name="max-price"
-                          style=" width: 143px" placeholder="">
-                        <span>до</span>
-                      </label>
-                    </div>
-                    <div class="range-scale">
-                      <div class="range-bar" style="left: 0; width: 226px">
-                        <button class="range-toggle toggle-min">
-                          <span class="visually-hidden">Изменить минимальную цену.</span>
-                        </button>
-                        <button class="range-toggle toggle-max">
-                          <span class="visually-hidden">Изменить максимальную цену.</span>
-                        </button>
-                      </div>
+              <fieldset class="catalog-filter-range">
+                <legend class="catalog-filter-title">Стоимость, ₽:</legend>
+                <div class="range">
+                  <div class="range-wrapper-inputs">
+                    <label class="range-form-field-text">
+                      <input class="range-input range-min" type="number" value="0" name="min-price"
+                        style=" width: 143px" placeholder="">
+                      <span>от</span>
+                    </label>
+                    <label class="range-form-field-text">
+                      <input class="range-input range-max" type="number" value="9000" name="max-price"
+                        style=" width: 143px" placeholder="">
+                      <span>до</span>
+                    </label>
+                  </div>
+                  <div class="range-scale">
+                    <div class="range-bar" style="left: 0; width: 226px">
+                      <button class="range-toggle toggle-min" type="button">
+                        <span class="visually-hidden">Изменить минимальную цену.</span>
+                      </button>
+                      <button class="range-toggle toggle-max" type="button">
+                        <span class="visually-hidden">Изменить максимальную цену.</span>
+                      </button>
                     </div>
                   </div>
-                </fieldset>
-                <div class="button-container-filter">
-                  <button class="button-catalog-filter button-submit " type="submit">Применить</button>
-                  <button class="button-catalog-filter button-reset" type="reset">Сбросить</button>
                 </div>
-              </form>
+              </fieldset>
+              <div class="button-container-filter">
+                <button class="button-catalog-filter button-submit " type="submit">Применить</button>
+                <button class="button-catalog-filter button-reset" type="reset">Сбросить</button>
+              </div>
+            </form>
           </div>
         </section>
         <div class="select-container">
