--- a/9/index.html
+++ b/9/index.html
@@ -185,51 +185,50 @@
     </div>
     <div class="modal-container">
       <div class="modal modal-auth">
-        <button class="modal-close-button">
+        <button class="modal-close-button" type="button">
           <span class="visually-hidden">Закрыть</span>
         </button>
         <section class="modal-content">
           <h2 class="modal-title">Поиск гостиницы в Седоне</h2>
-          <div class="modal-form-container"></div>
           <form class="date-form" action="https://echo.htmlacademy.ru/" method="post">
-            <p class="field-group">
+            <div class="field-group">
               <label class="modal-form-title" for="arrival-date">Дата Заезда:</label>
-              <label class="data-icon">
-                <input class="modal-form-text" type="text" id="arrival-date" name="arrival-date"
-                  placeholder="">
+              <div class="data-icon">
+                <input class="modal-form-text" type="text" id="arrival-date" name="arrival-date" placeholder="">
                 <span class="data-information data-error">Мы не можем отправить вас в прошлое.</span>
-              </label>
-            </p>
-            <p class="field-group">
+              </div>
+            </div>
+            <div class="field-group">
               <label class="modal-form-title" for="date-of-departure">Дата Выезда:</label>
-              <label class="data-icon">
+              <div class="data-icon">
                 <input class="modal-form-text" type="text" id="date-of-departure" name="date-of-departure"
                   placeholder="">
                 <span class="data-information">На эти даты есть свободные номера. Пока есть.</span>
-              </label>
-            </p>
+              </div>
+            </div>
             <div class="number-of-visitors">
-              <p class="quantity-group">
+              <div class="quantity-group">
                 <label class="modal-form-title" for="grown-ups">Взрослые:</label>
-                <label class="modal-input-container">
-                  <input class="modal-form-text form-number" type="number" id="grown-ups" name="grown-ups"
-                    placeholder="">
-                  <button class="modal-button plus"><svg xmlns="http://www.w3.org/2000/svg" width="14" height="14"
-                      fill="currentColor" viewBox="0 0 14 14">
-                      <path d="M14 6H8V0H6v6H0v2h6v6h2V8h6V6Z" />
-                    </svg></button>
-                  <button class="modal-button minus"><svg xmlns="http://www.w3.org/2000/svg" width="14" height="2"
-                      fill="currentColor" viewBox="0 0 14 2">
+                <div class="modal-input-container">
+                  <button class="modal-button" type="button"><svg xmlns="http://www.w3.org/2000/svg" class="minus" width="14"
+                      height="2" fill="currentColor" viewBox="0 0 14 2">
                       <path d="M0 0v2h14V0H0Z" />
                     </svg></button>
-                </label>
-              </p>
-              <p class="quantity-group">
+                  <input class="modal-form-text form-number" type="number" id="grown-ups" name="grown-ups"
+                    placeholder="">
+                  <button class="modal-button" type="button"><svg xmlns="http://www.w3.org/2000/svg" class="plus" width="14"
+                      height="14" fill="currentColor" viewBox="0 0 14 14">
+                      <path d="M14 6H8V0H6v6H0v2h6v6h2V8h6V6Z" />
+                    </svg></button>
+                </div>
+              </div>
+              <div class="quantity-group">
                 <span class="form-label form-label-icon">
                   <label class="modal-form-title " for="children">Дети:</label>
                   <span class="tooltip ">
                     <button class="tooltip-toggle" type="button" aria-labelledby="tooltip-label-date">
-                      <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="none" viewBox="0 0 20 20">
+                      <svg class="tooltip-icon" xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="none"
+                        viewBox="0 0 20 20">
                         <path fill="#fff" fill-rule="evenodd" d="M9 4h2v2H9V4Zm2 12H9V7h2v9Z" clip-rule="evenodd" />
                       </svg>
                     </button>
@@ -238,24 +237,25 @@
                       лет. Дети до 6 лет размещаются бесплатно.</span>
                   </span>
                 </span>
-                <label class="modal-input-container">
+                <div class="modal-input-container">
+                  <button class="modal-button" type="button">
+                    <svg xmlns="http://www.w3.org/2000/svg" class="minus" width="14" height="2" fill="currentColor"
+                      viewBox="0 0 14 2">
+                      <path d="M0 0v2h14V0H0Z" />
+                    </svg>
+                  </button>
                   <input class="modal-form-text form-number" type="number" id="children" name="children" placeholder="">
-                  <button class="modal-button plus"><svg xmlns="http://www.w3.org/2000/svg" width="14" height="14"
-                      fill="currentColor" viewBox="0 0 14 14">
+                  <button class="modal-button" type="button"><svg xmlns="http://www.w3.org/2000/svg" class="plus" width="14"
+                      height="14" fill="currentColor" viewBox="0 0 14 14">
                       <path d="M14 6H8V0H6v6H0v2h6v6h2V8h6V6Z" />
                     </svg></button>
-                  <button class="modal-button minus"><svg xmlns="http://www.w3.org/2000/svg" width="14" height="2"
-                      fill="currentColor" viewBox="0 0 14 2">
-                      <path d="M0 0v2h14V0H0Z" />
-                    </svg></button>
-                </label>
-                </span>
+                </div>
 
-              </p>
+              </div>
             </div>
+            <button type="submit" class="modal-container-button">Найти</button>
           </form>
         </section>
-        <a class="modal-container-button" href="#">Найти</a>
       </div>
   </body>
 
