--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
         </a>
       </footer>
     </div>
-    <div class="modal-container">
+    <!-- <div class="modal-container">
       <div class="modal modal-auth">
         <button class="modal-close-button" type="button">
           <span class="visually-hidden">Закрыть</span>
@@ -255,7 +255,7 @@
             <button type="submit" class="modal-container-button">Найти</button>
           </form>
         </section>
-      </div>
+      </div> -->
   </body>
 
 </html>
